--- a/chatbot/package.json
+++ b/chatbot/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.3",
     "gatsby": "^5.13.2",
     "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-netlify": "^5.1.1",
     "gatsby-plugin-sharp": "^5.13.1",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
